--- a/video_prediction/GAN.ipynb
+++ b/video_prediction/GAN.ipynb
@@ -394,14 +394,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Motion_D(nn.Module):\n",
     "\n",
-    "    def __init__(self,kernel_size=4):\n",
+    "    def __init__(self,num_keypoints,num_classes,kernel_size=4):\n",
     "        super(Motion_D, self).__init__()\n",
+    "        #input y_a (3*64*64) \n",
+    "        #y_l (c*4*4) ??\n",
+    "        #x (3*64*64)\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Conv2d(3,64,kernel_size,stride=2,padding=1),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Conv2d(64,128,kernel_size,stride=2,padding=1),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Conv2d(128,256,kernel_size,stride=2,padding=1),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.LeakyReLU())\n",
+    "        #TODO:convLSTM\n",
+    "        \n",
+    "        #last hidden state h_out (1*256*8*8)\n",
+    "        self.conv4 = nn.Conv2d(256,64,kernel_size,stride=2,padding=1)\n",
+    "        self.bn4 = nn.BatchNorm2d(64)\n",
+    "        #LeakyRelu -> flatten\n",
+    "        self.fc_h1 = nn.Linear(1024,64)\n",
+    "        self.bn_fc1 = nn.BatchNorm1d(64)\n",
+    "        #LeakyRelu\n",
+    "        self.fc_h2 = nn.Linear(64,num_classes)\n",
+    "        self.bn_fc2 = nn.BatchNorm1d(num_classes)\n",
+    "        #LeakyRelu -> softmax\n",
+    "        \n",
+    "        #output: ot (N,256,8,8)\n",
+    "        self.conv6 = nn.Conv2d(256,64,kernel_size,stride=2,padding=1)\n",
+    "        self.bn6 = nn.BatchNorm2d(64)\n",
+    "        #leakyRelu -> flatten\n",
+    "        self.fc_o = nn.Linear(1024,2*num_keypoints)\n",
+    "        \n",
+    "        #concatenate y_l (c*4*4) + (64*4*4) = (c+64,4,4)\n",
+    "        self.conv5 = nn.Conv2d(num_classes+64,64,kernel_size,stride=2,padding=1)\n",
+    "        self.bn5 = nn.BatchNorm(64)\n",
+    "        #leakyrelu\n",
+    "        self.fc_y = nn.Linear(64,1)\n",
+    "        #sigmoid\n",
+    "        \n",
+    "        #TODO forward\n",
+    "        \n",
     "        "
    ]
   },
